<resources>
    <string name="app_name">SEAN</string>
    <string name="search_show">Search Show</string>
    <string name="search">Search</string>
    <string name="app_greeting_message">Enter the name of the series you would like to look up in the field below, or add a new series into the app database!</string>
    <string name="search_by_series_title">Search by series title</string>
    <string name="genre">Genre</string>
    <string name="search_by">Search by:</string>
    <string name="show_status">Show Status</string>
    <string name="cancelled_on_hold">Cancelled/On Hold</string>
    <string name="completed">Completed</string>
    <string name="ongoing">Ongoing</string>
    <string name="add_a_new_series">Add a new Series</string>
    <string name="genre_field">Genre</string>
    <string name="name_of_series">Name of Series</string>
    <string name="show_type">Show Type</string>
    <string name="add_series">Add Series</string>
    <string name="cancel">Cancel Addition</string>
    <string name="no">No</string>
    <string name="series_not_found_message">Oh? This show does not exist in our database. Would you like to add the show you\'ve searched for into the database as a new series?</string>
    <string name="yes">Yes</string>
    <string name="series_addition_message">Enter your information on the series you will be adding:</string>
    <string name="series_name_bar">Enter Series Name</string>
    <string name="app_iteration_message">Note: This is a WIP app. Features will be added in future iterations of the app.</string>
    <string name="sean_homepage">SEAN: Series Entertainment Archive Network</string>
    <string name="search_option">Search for a series</string>
    <string name="archive_option">Go to My Archive</string>
    <string name="settings_option">Settings</string>
    <string name="profile_button">Profile</string>
    <string name="appHeader">SEAN: Series Entertainment Archive Network</string>
    <string name="header">SEAN: Series Entertainment Archive Network</string>
    <string name="return_button">Return to Home Page</string>
    <string name="under_construction_message">This page is still under construction. We apologize for the inconvenience: Press the Return to Home Page button to go back.</string>
    <string name="homepage_button">Return to Home Page</string>
    <string name="searchOption">Search for a Series</string>
    <string name="myArchiveOption">Access My Archive</string>
    <string name="settingsOption">App Settings</string>
    <string name="profileOption">Profile</string>
</resources>
